Fixed page overflow for projects and testimonials

--- a/src/component/landing-page/projects/project-item/style.module.scss
+++ b/src/component/landing-page/projects/project-item/style.module.scss
@@ -4,15 +4,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
 .projectItem {
+    cursor: grab;
     border-radius: 5px;
     background-color: $card-background;
     padding: 1.5rem 1rem;
-    width: 70%;
     text-align: center;
-    cursor: grab;
+    width: 70%;
 
     .projectIcon {
         height: 10rem;
