--- a/src/component/landing-page/testimonial/testimonial-item/style.module.scss
+++ b/src/component/landing-page/testimonial/testimonial-item/style.module.scss
@@ -1,5 +1,13 @@
 @import "@/style/variables";
 
+.testimonialContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
 .testimonialItem {
     display: flex;
     flex-direction: column;
